_sass/main.scss
/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0;margin-right:5px;}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}

:root {
	--background-color: #fff;
	--body-text-color: #333;
	--link-color-hover: #00a1e0;
	--accent-color-1: #ddd;
	--accent-color-2: #999;
	--accent-color-3: #555;
}
html {font-size: 10px;}
*,
input[type="email"],
input[type="password"],
input[type="search"],
input[type="text"],
input[type="url"],
textarea {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
body {
	background-color:var(--background-color);
	color: var(--body-text-color);
	font-family: "Avenir Next", "Avenir", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    font-weight: 400;
    font-size: 17x;
	font-size: 1.7rem;
	line-height: 1.7;
    animation: fadeInAnimation ease 0.75s; 
	animation-iteration-count: 1; 
	animation-fill-mode: forwards;
}
@keyframes fadeInAnimation { 
	0% { 
		opacity: 0; 
	} 
	100% { 
		opacity: 1; 
	} 
}
a {color: var(--body-text-color);}
a:hover {
	color: var(--link-color-hover);
	transition: all .3s ease-in-out;
}
h1, h2, h3, h4, h5, h6 {
	font-weight: bold;
}
h1 {
	font-size: 24px;
	font-size: 2.4rem;
}
h2 {
	font-size: 20px;
	font-size: 2rem;
}
h3 {
	font-size: 18px;
	font-size: 1.8rem;
}
h4, h5, h6 {
	font-size: 16px;
	font-size: 1.6rem;
}
pre, code {
	font-family: monospace;
	font-size: 14px;
	font-size: 1.4rem;
}

// Header
header {
	padding: 20px 0;
	width: 100%;
	margin: 0 auto;
	text-align: center;
}
header h1 {
	margin: 0;
	font-size: 24x;
	font-size: 2.4rem;
}

// Navigation
nav {
	border-top: 1px solid var(--accent-color-1);
	border-bottom: 1px solid var(--accent-color-1);
	text-align: center;
}
nav a {
	line-height: 3;
	margin: 0 10px;
}
nav a.current {
	color: var(--link-color-hover);
}

// Content
.content {
	width: 100%;
	padding: 5px 20px;
	max-width: 740px;
	margin: 0 auto;
}

main {
	overflow: auto;
	width: 100%;
	margin: 10px 0;
}
main h1,
main h2,
main h3 {
	margin: 35px 0 -5px;
	line-height: 1.2;
}
main:first-of-type h1 {
	margin-top: 25px;
	margin-bottom: 25px;
	line-height: 1.2;
}
main img {
	max-width: 100%;
	margin: 20px auto 10px auto;
}
main img[src*="#full"] {
	width:100%;
	height:auto;
}
ul.post-list {
	list-style: none;
	padding: 0;
	margin-bottom: 25px;
	text-align: center;
}
ul.post-list h2 {
	margin: 0;
}
ul.post-list a {
	display: inline-block;
	padding: 20px 0;
	border-bottom: 1px solid var(--accent-color-1);
	width: 100%;
}
ul.post-list a:link,
ul.post-list a:visited {
	text-decoration: none;
}
ul.post-list a:hover,
ul.post-list a:active {
	text-decoration: underline;
}
.post-title {
	line-height: 1.2;
	margin: 25px 0 15px 0;
}
p.meta {
	color: var(--accent-color-2);
	font-size: 12px;
	margin: -20px 0 25px 0;
	text-transform: uppercase;
}
p.category {
	font-size: 12px;
	text-transform: uppercase;
}
#disqus_thread {
	margin: 30px 0;
	padding: 20px 20px 0 20px;
	background: #f6f6f6;
}

// Single page pagination
.single-pagination {
    border-bottom: 1px solid var(--accent-color-1);
    border-top: 1px solid var(--accent-color-1);
    float: left;
    margin: 15px 0 0 0;
    padding: 20px 0 0 0;
    width: 100%;
}
.single-pagination:after {
    clear: both;
}
.single-pagination .next-link {
    float: left;
    margin-right: 20px;
    text-align: left;
    vertical-align: text-top;
    width: 45%;
}
.single-pagination .prev-link {
    float: right;
    margin-left: 20px;
    text-align: right;
    vertical-align: text-top;
    width: 45%;
}
.single-pagination h5 {
	color: var(--accent-color-2);
    font-size: 14px;
    font-size: 1.4rem;
    margin: 0 0 -15px 0;
}
.single-pagination p {
    line-height: 1.1;
}
.single-pagination a {
    background: none;
    line-height: 1.4;
}
.single-pagination a:hover {
    color: var(--link-color-hover);
}

// Home page pagination
.pagination {
    text-align: center;
	font-size: 14px;
	font-size: 1.4rem;
 }
.pagination a,
.pagination span {
    padding: 6px 12px 4px;
    border: 1px solid var(--accent-color-1);
    margin-left: -3px;
    margin-right: -3px;
    background-color: #ffffff;
    display: inline-block;
	text-decoration: none;
  }
.pagination a {
    &:hover {
        background-color: #f1f1f1;
		text-decoration: underline;
    }
 }
 .pagination .prev {
	border-radius: 5px 0 0 5px;
}
 .pagination .next {
	 border-radius: 0 5px 5px 0;
 }

// Footer
footer {
	color: var(--accent-color-2);
	padding: 5px 0;
	width: 100%;
	margin: 0 auto 15px auto;
	text-align: center;
	font-size: 12px;
	font-size: 1.2rem;
	text-transform: uppercase;
}

// Mobile responsive
@media only screen and (max-width: 740px) {
	.single-pagination .prev-link,
    .single-pagination .next-link {
        margin: 0;
        text-align: left;
        width: 100%;
    }
	#disqus_thread {
		max-width: calc(100% + 40px);
		margin-left: calc(-20px);
		margin-right: calc(-20px);
	}
}

